<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BrightnessSetupActivity">

    <TextView
        android:id="@+id/setup_brightness_textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="96dp"
        android:text="@string/brightness_setup_edit_text"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setup_brightness_textView">

        <TextView
            android:id="@+id/slider_0_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/brightness_0"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/slider_25_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/brightness_25"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/slider_50_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/brightness_50"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/slider_75_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/brightness_75"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/slider_100_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/brightness_100"
            android:textAlignment="center"
            android:textSize="22sp" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/brightness_slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/brightness_accept_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:onClick="onClickSetBrightness"
        android:text="@string/accept_button"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brightness_slider" />

</androidx.constraintlayout.widget.ConstraintLayout>