<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteActivity">

    <TextView
        android:id="@+id/type_note_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/type_note_textView"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/type_note_editText"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="8dp"
        android:hint="@string/type_note_hint"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/type_note_textView"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/send_note_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/accept_button"
        android:textSize="24sp"
        android:onClick="onClickSendNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_note_editText" />


</androidx.constraintlayout.widget.ConstraintLayout>